<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroPuppet</string>
    <string-array name="settings_array">
        <item>Server Settings</item>
        <item>Client Settings</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="ip_addr"> IP Address: </string>
    <string name="subnet_mask">Subnet Mask: </string>
    <string name="gw">Default Gateway: </string>
    <string name="dns">DNS Server: </string>

    <string name="username">Username: </string>
    <string name="password">Password: </string>

    <string name="title_activity_select_machine">SelectMachineActivity</string>
    <string name="dev_machine">Basic Developer Machine</string>
    <string name="pentesting_machine">Penetration Testing Machine</string>
    <string name="puppetdev_machine">Puppet Development Machine</string>
    <string name="railsdev_machine">Rails Development Machine</string>
    <string name="build">Build!</string>

    <string name="machine_status">Machine Status: </string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_machine">Machine</string>
</resources>
