<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="info.teamgrinnich.andropuppet.SelectMachineActivity">

    <RadioGroup
        android:id="@+id/machineButtonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/build_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="125dp">

        <RadioButton
            android:id="@+id/dev_machine_radio"
            android:text="@string/dev_machine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pen_machine_radio"
            android:layout_centerHorizontal="true"/>

        <RadioButton
        android:id="@+id/pen_machine_radio"
        android:text="@string/pentesting_machine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/dev_machine_radio"
        android:layout_alignStart="@+id/dev_machine_radio"/>

        <RadioButton
            android:id="@+id/puppet_machine_radio"
            android:text="@string/puppetdev_machine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/dev_machine_radio"
            android:layout_alignStart="@+id/dev_machine_radio"/>

        <RadioButton
            android:id="@+id/rails_machine_radio"
            android:text="@string/railsdev_machine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/dev_machine_radio"
            android:layout_alignStart="@+id/dev_machine_radio"/>
    </RadioGroup>

    <Button
        android:id="@+id/build_button"
        android:text="@string/build"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
