<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip_addr"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/edittextip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/ip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_below="@+id/edittextip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/edittextuser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/user"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:singleLine="true"
        android:layout_below="@+id/edittextuser"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/edittextpw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/pw"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test Connection"
        android:id="@+id/testServerConnectButton"
        android:layout_marginTop="97dp"
        android:layout_below="@+id/edittextpw"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Connect"
        android:minEms="5"
        android:id="@+id/serverConnectButton"
        android:layout_below="@+id/testServerConnectButton"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>